# doi-literature-extractor

./: .env.example  .gitignore  MIGRATION_REPORT.md  README.md  pyproject.toml  test_structure.py
doi_extractor/: api.py  cli.py  extractor.py
doi_extractor/db/: models.py  storage.py
doi_extractor/parsers/: abstract_extractor.py  crossref_parser.py
