[tool.poetry]
name = "doi-literature-extractor"
version = "0.1.0"
description = "Extract journal article metadata by DOI with web scraping support"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "doi_extractor"}]

[tool.poetry.scripts]
doi-extractor = "doi_extractor.cli:main"
doi-extractor-api = "doi_extractor.api:main"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.28.0"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.0"
aiosqlite = "^0.19.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
python-dotenv = "^1.1.0"
click = "^8.1.0"
# Optional: Selenium for Cloudflare-protected sites
selenium = {version = "^4.15.0", optional = true}
# Optional: Web API
fastapi = {version = "^0.104.0", optional = true}
uvicorn = {version = "^0.24.0", optional = true}

[tool.poetry.extras]
web = ["selenium"]
api = ["fastapi", "uvicorn"]
full = ["selenium", "fastapi", "uvicorn"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
